--- a/css/style.less
+++ b/css/style.less
@@ -1,3 +1,9 @@
+.clearfix() {
+  zoom: 1;
+  &:before { content: ''; display: block; }
+  &:after { content: ''; display: table; clear: both; }
+}
+
 /* ==========================================================================
    Main Styles
    ========================================================================== */
@@ -15,7 +21,7 @@
 	   margin-bottom:1em;
 	   font-size:0.75em;
 	   z-index:1000;
-	   
+	   top:0;
 	   h1 {
 		   font-family: 'Lobster', cursive;
 		   padding-left:1em;
@@ -29,12 +35,17 @@
 	   width:100%;
 	   position:relative;
 	   top:75px;
+	   .clearfix();
    
-   		img {
+   		img.instagram-image {
+			width:100%;
+			}
+		}
+		
+		div.instagram-placeholder {
 			width:49%;
 			float:left;
 			padding:0.5%;
-			}
 		}
 		
 		div.overlay {
@@ -54,6 +65,7 @@
 				}
 			li {
 				list-style-type:none;
+				.clearfix();
 				img {
 					float:none;
 					width:100%;
@@ -72,6 +84,8 @@
 			}
 		
 		button.load_btn {
+			position:relative;
+			top:75px;
 			width:100%;
 			height:2.75em;
 			background:#C16B32;
@@ -84,7 +98,7 @@
 		
 		@media only screen and (min-width:600px) {
 		    .instagram {
-		    		img {
+		    		div.instagram-placeholder {
 		 			width:32%;
 		 			}
 		 		}
@@ -93,7 +107,7 @@
 		
 		@media only screen and (min-width:900px) {
 		    .instagram {
-		    		img {
+		    		div.instagram-placeholder {
 		 			width:24%;
 		 			}
 		 		}
@@ -101,7 +115,7 @@
 		
 		@media only screen and (min-width:1200px) {
 		    .instagram {
-		    		img {
+		    		div.instagram-placeholder {
 		 			width:19%;
 		 			}
 		 		}
